syntax = "proto3";

option go_package = "pb/";

package business.v1;


message CreateBusinessRequest {
    string name = 1;
    string address = 2;
    string businessManager = 3;
}

message CreateBusinessResponse {
    uint64 id = 1;
}

message DeleteBusinessRequest {
    uint64 id = 1;
}

message DeleteBusinessResponse {
    optional uint64 id = 1;
}

service Business {
    rpc CreateNewBusiness(CreateBusinessRequest) returns (CreateBusinessResponse) {}
    rpc DeleteBusiness(DeleteBusinessRequest) returns (DeleteBusinessResponse) {}
}